[package]
name = "slimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-display-derive = "0.1.1"
futures = "0.3.30"
nix = { version = "0.28.0", features = ["fs", "signal"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
shlex = "1.3.0"
smol = "2.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["validate"]
validate = []

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort"     # Abort on panic

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
